crates/oxc_semantic/tests/snapshots/cfg__cfg_files@nested_computed_member_expression.js-2.snap
---
source: crates/oxc_semantic/tests/cfg.rs
expression: output.cfg_dot_diagram()
input_file: crates/oxc_semantic/tests/cfg_fixtures/nested_computed_member_expression.js
---
digraph {
    0 [ label = ""]
    1 [ label = "$5 = Reference(<a>)\n$6 = $5.b\n$7 = $6.g\n$8 = $7.h\n$9 = $8.i\n$2 = Reference(<c>)\n$3 = $2.d\n$0 = Reference(<e>)\n$1 = $0.f\n$4 = $3[$1]\n$return = $9[$4]"]
    2 [ label = "Unreachable()"]
    3 [ label = "$10 = Function{}"]
    0 -> 1 [ ]
    1 -> 2 [ ]
    0 -> 3 [ ]
}

