crates/oxc_semantic/tests/snapshots/cfg__cfg_files@new_and_meta.js-2.snap
---
source: crates/oxc_semantic/tests/cfg.rs
expression: output.cfg_dot_diagram()
input_file: crates/oxc_semantic/tests/cfg_fixtures/new_and_meta.js
---
digraph {
    0 [ label = "$1 = Reference(<URL>)\n$2 = Constant(<\"../public/favicon.ico\">)\n$3 = Constant(<import.meta>)\n$4 = $3.url\n$5 = new $1($2, $4)\n$0 = $5.toString\n$6 = $0()"]
}

