crates/oxc_semantic/tests/snapshots/cfg__cfg_files@parenthesized_and_sequence_expr.js-2.snap
---
source: crates/oxc_semantic/tests/cfg.rs
expression: output.cfg_dot_diagram()
input_file: crates/oxc_semantic/tests/cfg_fixtures/parenthesized_and_sequence_expr.js
---
digraph {
    0 [ label = ""]
    1 [ label = "$1 = Constant(<1>)\n$2 = Constant(<2>)\n$3 = Constant(<3>)\n$0 = $3.toString\n$4 = $0()"]
    2 [ label = "$5 = Function{}"]
    3 [ label = "$7 = Constant(<\"orange\">)\n$6 = $7.toString\n$8 = $6()"]
    4 [ label = "$9 = Function{}"]
    0 -> 1 [ ]
    0 -> 2 [ ]
    2 -> 3 [ ]
    2 -> 4 [ ]
}

