crates/oxc_semantic/tests/snapshots/cfg__cfg_files@spread_in_a_spread.js-2.snap
---
source: crates/oxc_semantic/tests/cfg.rs
expression: output.cfg_dot_diagram()
input_file: crates/oxc_semantic/tests/cfg_fixtures/spread_in_a_spread.js
---
digraph {
    0 [ label = ""]
    1 [ label = "$0 = Constant(<1>)\n$1 = Constant(<2>)\n$2 = Constant(<3>)\n$3 = Reference(<x>)\n$4 = ArrayMadeWithExpressions[$2, ...$3]\n$return = ArrayMadeWithExpressions[$0, $1, ...$4]"]
    2 [ label = "Unreachable()"]
    3 [ label = "$5 = Function{}"]
    0 -> 1 [ ]
    1 -> 2 [ ]
    0 -> 3 [ ]
}

