crates/oxc_semantic/tests/snapshots/cfg__cfg_files@switch_in_while.js-2.snap
---
source: crates/oxc_semantic/tests/cfg.rs
expression: output.cfg_dot_diagram()
input_file: crates/oxc_semantic/tests/cfg_fixtures/switch_in_while.js
---
digraph {
    0 [ label = ""]
    1 [ label = "$0 = Reference(<a>)"]
    2 [ label = "$1 = Reference(<foo>)"]
    3 [ label = "$2 = Constant(<0>)"]
    4 [ label = "$3 = Reference(<a>)\n$4 = $3()"]
    5 [ label = "Unreachable()"]
    6 [ label = "Unreachable()"]
    7 [ label = "$5 = Constant(<1>)"]
    8 [ label = "$6 = Reference(<b>)\n$7 = $6()"]
    9 [ label = ""]
    3 -> 4 [ ]
    4 -> 5 [ ]
    5 -> 6 [ ]
    4 -> 6 [ ]
    7 -> 8 [ ]
    3 -> 7 [ ]
    6 -> 7 [ ]
    2 -> 3 [ ]
    2 -> 7 [ ]
    7 -> 8 [ ]
    0 -> 1 [ ]
    1 -> 2 [ ]
    2 -> 9 [ ]
    2 -> 1 [ ]
    1 -> 9 [ ]
    5 -> 1 [ ]
}

