crates/oxc_semantic/tests/snapshots/cfg__cfg_files@switch_statement.js-2.snap
---
source: crates/oxc_semantic/tests/cfg.rs
expression: output.cfg_dot_diagram()
input_file: crates/oxc_semantic/tests/cfg_fixtures/switch_statement.js
---
digraph {
    0 [ label = ""]
    1 [ label = "$0 = Constant(<true>)"]
    2 [ label = "$1 = Constant(<1>)"]
    3 [ label = "$2 = Constant(<'case 1'>)"]
    4 [ label = "Unreachable()"]
    5 [ label = "$3 = Constant(<2>)"]
    6 [ label = "$4 = Constant(<'case 2'>)"]
    7 [ label = "$5 = Constant(<3>)"]
    8 [ label = "$6 = Constant(<'case 3'>)"]
    9 [ label = "Unreachable()"]
    10 [ label = "$7 = Constant(<4>)"]
    11 [ label = "$8 = Constant(<'case 4'>)\n$9 = Constant(<10>)\n$10 = Reference(<i>)\n$11 = $10++\n$return = Reference(<i>)"]
    12 [ label = "Unreachable()"]
    13 [ label = "$12 = Constant(<5>)"]
    14 [ label = "$13 = Constant(<'case 5'>)\n$14 = Reference(<j>)\n$15 = $14++\n$16 = Reference(<foo>)\n$17 = $16()"]
    15 [ label = ""]
    16 [ label = "$18 = Constant(<'default'>)\n$return = Constant(<10>)"]
    17 [ label = "Unreachable()\n$19 = Constant(<'function scope'>)\n$return = Constant(<5>)"]
    18 [ label = "Unreachable()"]
    19 [ label = "$20 = Function{}"]
    0 -> 1 [ ]
    2 -> 3 [ ]
    3 -> 4 [ ]
    3 -> 4 [ ]
    5 -> 6 [ ]
    7 -> 8 [ ]
    8 -> 9 [ ]
    8 -> 9 [ ]
    10 -> 11 [ ]
    11 -> 12 [ ]
    13 -> 14 [ ]
    15 -> 16 [ ]
    16 -> 17 [ ]
    2 -> 5 [ ]
    2 -> 7 [ ]
    2 -> 10 [ ]
    2 -> 13 [ ]
    2 -> 15 [ ]
    4 -> 5 [ ]
    1 -> 2 [ ]
    5 -> 7 [ ]
    5 -> 10 [ ]
    5 -> 13 [ ]
    5 -> 15 [ ]
    6 -> 7 [ ]
    1 -> 5 [ ]
    7 -> 10 [ ]
    7 -> 13 [ ]
    7 -> 15 [ ]
    9 -> 10 [ ]
    1 -> 7 [ ]
    10 -> 13 [ ]
    10 -> 15 [ ]
    12 -> 13 [ ]
    1 -> 10 [ ]
    13 -> 15 [ ]
    14 -> 15 [ ]
    1 -> 13 [ ]
    1 -> 15 [ ]
    15 -> 17 [ ]
    17 -> 18 [ ]
    0 -> 19 [ ]
}

