crates/oxc_semantic/tests/snapshots/cfg__cfg_files@template_literal.js-2.snap
---
source: crates/oxc_semantic/tests/cfg.rs
expression: output.cfg_dot_diagram()
input_file: crates/oxc_semantic/tests/cfg_fixtures/template_literal.js
---
digraph {
    0 [ label = "$1 = Reference(<apple>)\n$2 = $1()\n$0 = TaggedTemplateMadeWithExpressions{$2}\n$3 = $0()"]
}

